force-app/main/default/objects/Opportunity/fields/Churn_Type__c.field-meta.xml
<CustomField>
    <fullName>Churn_Type__c</fullName>
    <label>Churn Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regrettable</fullName>
            </value>
            <value>
                <fullName>Structural</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Member Stuck</fullName>
            </value>
            <value>
                <fullName>No Churn</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>