force-app/main/default/objects/Opportunity/fields/Lighting_URL__c.field-meta.xml
<CustomField>
    <fullName>Lighting_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://hyke.lightning.force.com/lightning/r/Opportunity/&quot; &amp; Id &amp; &quot;/view&quot;,&quot;https://hyke.lightning.force.com/lightning/r/Opportunity/&quot; &amp; Id &amp; &quot;/view&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lighting URL</label>
    <type>Text</type>
</CustomField>