force-app/main/default/objects/Opportunity/recordTypes/Bookkeeping.recordType-meta.xml
<RecordType>
    <fullName>Bookkeeping</fullName>
    <active>true</active>
    <businessProcess>Bookkeeping</businessProcess>
    <label>Bookkeeping</label>
</RecordType>