force-app/main/default/objects/Opportunity/recordTypes/New_Business.recordType-meta.xml
<RecordType>
    <fullName>New_Business</fullName>
    <active>true</active>
    <businessProcess>New Business</businessProcess>
    <label>New Business</label>
</RecordType>