force-app/main/default/objects/Opportunity/recordTypes/Tax_Return.recordType-meta.xml
<RecordType>
    <fullName>Tax_Return</fullName>
    <active>true</active>
    <businessProcess>Tax Return</businessProcess>
    <label>Tax Return</label>
</RecordType>