force-app/main/default/objects/Opportunity/listViews/All_Formation_Opps.listView-meta.xml
<ListView>
    <fullName>All_Formation_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Formation</value>
    </filters>
    <label>All Formation Opps</label>
</ListView>