force-app/main/default/objects/Opportunity/listViews/All_in_Takeover_flow.listView-meta.xml
<ListView>
    <fullName>All_in_Takeover_flow</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Takeover</value>
    </filters>
    <label>All Takeover Opps</label>
</ListView>