force-app/main/default/objects/Opportunity/listViews/All_New_Business_Opps.listView-meta.xml
<ListView>
    <fullName>All_New_Business_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>New Business</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>In Waitlist,Qualify,Eligible,Qualified,Reschedule Intro Call,Take Intro Call,Follow Up</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Qualified</value>
    </filters>
    <label>All New Business Opps</label>
</ListView>