force-app/main/default/objects/Opportunity/listViews/All_Onboarding_Opps.listView-meta.xml
<ListView>
    <fullName>All_Onboarding_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Onboarding</value>
    </filters>
    <filters>
        <field>Last_Stage__c</field>
        <operation>equals</operation>
        <value>Confirm Training Call Scheduled</value>
    </filters>
    <label>All Onboarding Opps</label>
</ListView>