force-app/main/default/objects/Opportunity/listViews/All_Running_Opps.listView-meta.xml
<ListView>
    <fullName>All_Running_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Running</value>
    </filters>
    <label>All Running Opps</label>
</ListView>